# omegle-lib

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/simple_terminal/: Cargo.toml
examples/simple_terminal/src/: main.rs
src/: chat_event.rs  chat_session.rs  error.rs  event_handler.rs  id.rs  lib.rs  omegle.rs  server.rs  status.rs
src/types/: chat_event.rs  chat_server.rs  check_server.rs  client_id.rs  error.rs  lang.rs  mod.rs  rand_id.rs  server.rs
