[package]
name = "omegle-rs"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Tyuterev <maxtyuterev@gmail.com>"]
description = "Library for interfacing with the chat service Omegle"
readme = "README.md"
keywords = ["chat", "omegle"]

[dependencies]
json = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
vec1 = "1.10.1"
futures = "0.3.26"
