[package]
name = "omegle-rs"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Tyuterev <maxtyuterev@gmail.com>"]
description = "Library for interfacing with the chat service Omegle"
readme = "README.md"
keywords = ["chat", "omegle"]

[dependencies]
serde_json = "1.0.96"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
vec1 = { version = "1.10.1", features = ["serde"] }
futures = "0.3.26"
serde = {version= "1.0.163", features = ["derive"]}
